--- a/react-course/app/index.css
+++ b/react-course/app/index.css
@@ -77,27 +77,27 @@ a {
 
 /* Elements */
 
-h1 {
+h2 {
   font-family: "Paytone One", sans-serif;
   text-transform: uppercase;
   font-size: 24px;
 }
 
-h2 {
+h3 {
   font-size: 20px;
   font-weight: 400;
   margin: 0;
   margin-bottom: 24px;
 }
 
-h3 {
+h4 {
   font-size: 18px;
   font-weight: 400;
   margin: 0;
   margin-bottom: 24px;
 }
 
-h4 {
+h5 {
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 700;
@@ -317,7 +317,7 @@ tbody td:first-child {
   --size: 48px;
 }
 
-.disabled {
+.btn:disabled {
   pointer-events: none;
   cursor: not-allowed;
   opacity: 0.5;
