--- a/react-course/app/index.css
+++ b/react-course/app/index.css
@@ -487,3 +487,11 @@ tbody td:first-child {
 .card li > *:not(:first-child) {
   opacity: 0.75;
 }
+.loading {
+  font-size: 14px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-top: 20px;
+  text-align: center;
+}
