react course - 15 with hover

--- a/react-course/app/index.css
+++ b/react-course/app/index.css
@@ -420,7 +420,7 @@ tbody td:first-child {
   opacity: 0.75;
 }
 
-.tooltip-container {
+.hover-container {
   position: relative;
   display: flex;
 }
