--- a/react-course/app/index.css
+++ b/react-course/app/index.css
@@ -317,7 +317,7 @@ tbody td:first-child {
   --size: 48px;
 }
 
-.btn:disabled {
+.btn.disabled {
   pointer-events: none;
   cursor: not-allowed;
   opacity: 0.5;
